[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/DebugConsole/DebugConsole.gd" type="Script" id=1]

[node name="DebugConsole" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandsDefinitions" type="Node" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 32.0
margin_top = 7.0
margin_right = 352.0
margin_bottom = 209.0

[node name="HideButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
text = "Hide"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 174.0
rect_min_size = Vector2( 320, 150 )
text = "Debug Console"
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 320.0
margin_bottom = 202.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/Input" to="." method="_on_input_text_changed"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/Input" to="." method="_on_input_text_entered"]
